src/snapshots/hemlis_lib__parser__tests__minimal_b.snap
---
source: src/parser.rs
expression: "p_module(r\"\nmodule A where\n\na :: Test\na =\n  b\n    let\n      b =\n        let\n          f :: forall e. S -> e -> _\n          f m e =\n            { a: M 1\n            , s: Left {}\n            }\n        in\n        do\n          m <- g\n          E.l M.i\n    in [ ]\n            \")"
---
62 of 62
===
Module
 Header
  MName
   (1, 7)->(1, 8)
  NULL
  Decl::Sig
   Name
    (3, 0)->(3, 1)
   Typ::Constructor
    QProperName
     NULL
     ProperName
      (3, 5)->(3, 9)
  Decl::Def
   Name
    (4, 0)->(4, 1)
   GuardedExpr::Unconditional
    Expr::App
     Expr::Ident
      QName
       NULL
       Name
        (5, 2)->(5, 3)
     Expr::Let
      (6, 4)->(6, 7)
       LetBinding::Name
        Name
         (7, 6)->(7, 7)
        GuardedExpr::Unconditional
         Expr::Let
          (8, 8)->(8, 11)
           LetBinding::Sig
            Name
             (9, 10)->(9, 11)
            Typ::Forall
              TypVarBinding
               Name
                (9, 22)->(9, 23)
               NULL
             Typ::Arr
              Typ::Constructor
               QProperName
                NULL
                ProperName
                 (9, 25)->(9, 26)
              Typ::Arr
               Typ::Var
                Name
                 (9, 30)->(9, 31)
               Typ::Wildcard
                (9, 35)->(9, 36)
           LetBinding::Name
            Name
             (10, 10)->(10, 11)
             Binder::Var
              Name
               (10, 12)->(10, 13)
             Binder::Var
              Name
               (10, 14)->(10, 15)
            GuardedExpr::Unconditional
             Expr::Record
              (11, 12)->(11, 13)
               RecordLabelExpr::Field
                Label
                 (11, 14)->(11, 15)
                Expr::App
                 Expr::Constructor
                  QProperName
                   NULL
                   ProperName
                    (11, 17)->(11, 18)
                 Expr::Number
                  Number
                   (11, 19)->(11, 20)
               RecordLabelExpr::Field
                Label
                 (12, 14)->(12, 15)
                Expr::Update
                 Expr::Constructor
                  QProperName
                   NULL
                   ProperName
                    (12, 17)->(12, 21)
              (14, 8)->(14, 10)
          Expr::Do
           NULL
            DoStmt::Stmt
             Binder::Var
              Name
               (16, 10)->(16, 11)
             Expr::Ident
              QName
               NULL
               Name
                (16, 15)->(16, 16)
            DoStmt::Stmt
             NULL
             Expr::App
              Expr::Ident
               QName
                Qual
                 (17, 10)->(17, 12)
                Name
                 (17, 12)->(17, 13)
              Expr::Ident
               QName
                Qual
                 (17, 14)->(17, 16)
                Name
                 (17, 16)->(17, 17)
      Expr::Array
       (18, 7)->(18, 8)
       (19, 0)->(19, 0)
===
