src/snapshots/hemlis_lib__parser__tests__minimal_e.snap
---
source: src/parser.rs
expression: "p_module(r\"\nmodule E () where\n\ndata E\n  = E\n      { e :: E\n      }\n  | E E\n            \")"
---
19 of 19
===
Module
 Header
  MName
   (1, 7)->(1, 8)
  (1, 0)->(1, 6)
  (1, 12)->(1, 17)
  Decl::Data
   ProperName
    (3, 5)->(3, 6)
    (
     ProperName
      (4, 4)->(4, 5)
      Typ::Record
       (5, 6)->(7, 3)
        Row
          (
           Label
            (5, 8)->(5, 9)
           Typ::Constructor
            QProperName
             NULL
             ProperName
              (5, 13)->(5, 14)
          )
         NULL
    )
    (
     ProperName
      (7, 4)->(7, 5)
      Typ::Constructor
       QProperName
        NULL
        ProperName
         (7, 6)->(7, 7)
    )
===
